--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "mp-cz": "bin/mp-cz.js",
     "mp-cz-init": "bin/mp-cz-init.js"
   },
-  "name": "mp-cz-cli",
+  "name": "mp-cz-cli2",
   "version": "0.0.1",
   "description": "小程序-脚手架",
   "main": "index.js",
